--- a/index.html
+++ b/index.html
@@ -159,7 +159,12 @@
                 <img src="img/about_img.png" alt="">
             </div>
             <div class="about__info">
-                <div class="about__info-title">Меня зовут <br> <span> Артем Нестеренко</span></div>
+                <div class="about__info-title">
+                    <div> Меня зовут <br> <span> Артем Нестеренко</span></div>
+                    <div class="about__info-title-img">
+                        <img src="img/about_s2.png" alt="">
+                    </div>
+                </div>
                 <div class="about__info-text">
                     <p> И я знаю, как сложно бывает развивать сетевой, когда один человек присоединяется, а два
                         отваливаются.</p>
